feat(playlist-collections): add better position handling and return collectoins with playlist details
