# openapi.yaml
@@ -8,10 +8,7 @@ info:
         It provides authentication, playlist management, and video integration features.
         Requests are rate limited .
 servers:
-  - url: http://localhost:4000
-    description: Local development server
-  - url: https://playlist.api.chantellecs.com
-    description: Deployed server
+  - url: playlist.api.chantellecs.com
 paths:
   /api/auth/register:
     post:
@@ -1794,6 +1791,7 @@ paths:
                     description: null
                     coverUrl: null
                     numVideos: 10
+                    updatedAt: 2026-01-01T00:00:00.000Z
                 message: null
               schema:
                 type: object
@@ -1832,6 +1830,12 @@ paths:
                               - type: "null"
                           numVideos:
                             type: number
+                          updatedAt:
+                            type: string
+                          collections:
+                            type: array
+                            items:
+                              type: string
                         required:
                           - id
                           - userId
@@ -1839,6 +1843,8 @@ paths:
                           - description
                           - coverUrl
                           - numVideos
+                          - updatedAt
+                          - collections
                         additionalProperties: false
                     required:
                       - playlist
@@ -1989,6 +1995,7 @@ paths:
                       description: null
                       coverUrl: null
                       numVideos: 10
+                      updatedAt: 2026-01-01T00:00:00.000Z
                 message: null
               schema:
                 type: object
@@ -2029,6 +2036,8 @@ paths:
                                 - type: "null"
                             numVideos:
                               type: number
+                            updatedAt:
+                              type: string
                           required:
                             - id
                             - userId
@@ -2036,6 +2045,7 @@ paths:
                             - description
                             - coverUrl
                             - numVideos
+                            - updatedAt
                           additionalProperties: false
                     required:
                       - playlists
@@ -2116,6 +2126,11 @@ paths:
                     description: My playlist description
                     coverUrl: null
                     numVideos: 10
+                    updatedAt: 2026-01-01T00:00:00.000Z
+                    collections:
+                      - 00000000-0000-0000-0000-000000000000
+                      - 00000000-0000-0000-0000-000000000000
+                      - 00000000-0000-0000-0000-000000000000
                     videos:
                       - id: 00000000-0000-0000-0000-000000000000
                         title: Test Video
@@ -2390,6 +2405,7 @@ paths:
                     description: Updated description
                     coverUrl: example.image.com
                     numVideos: 10
+                    updatedAt: 2026-01-01T00:00:00.000Z
                 message: null
               schema:
                 type: object
@@ -2428,6 +2444,12 @@ paths:
                               - type: "null"
                           numVideos:
                             type: number
+                          updatedAt:
+                            type: string
+                          collections:
+                            type: array
+                            items:
+                              type: string
                         required:
                           - id
                           - userId
@@ -2435,6 +2457,8 @@ paths:
                           - description
                           - coverUrl
                           - numVideos
+                          - updatedAt
+                          - collections
                         additionalProperties: false
                     required:
                       - playlist
@@ -3980,47 +4004,6 @@ paths:
                                   anyOf:
                                     - type: string
                                     - type: "null"
-                                videos:
-                                  type: array
-                                  items:
-                                    type: object
-                                    properties:
-                                      id:
-                                        type: string
-                                        format: uuid
-                                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                      playlistId:
-                                        type: string
-                                        format: uuid
-                                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                      title:
-                                        type: string
-                                      description:
-                                        type: string
-                                      thumbnail:
-                                        type: string
-                                      url:
-                                        type: string
-                                      platform:
-                                        anyOf:
-                                          - type: string
-                                          - type: "null"
-                                      platformId:
-                                        anyOf:
-                                          - type: string
-                                          - type: "null"
-                                      render:
-                                        type: boolean
-                                      position:
-                                        type: number
-                                    required:
-                                      - id
-                                      - playlistId
-                                      - title
-                                      - url
-                                      - render
-                                      - position
-                                    additionalProperties: false
                                 coverUrl:
                                   anyOf:
                                     - type: string
@@ -4032,7 +4015,6 @@ paths:
                               required:
                                 - id
                                 - name
-                                - videos
                                 - coverUrl
                                 - numVideos
                                 - updatedAt
@@ -4269,47 +4251,6 @@ paths:
                                   anyOf:
                                     - type: string
                                     - type: "null"
-                                videos:
-                                  type: array
-                                  items:
-                                    type: object
-                                    properties:
-                                      id:
-                                        type: string
-                                        format: uuid
-                                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                      playlistId:
-                                        type: string
-                                        format: uuid
-                                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                      title:
-                                        type: string
-                                      description:
-                                        type: string
-                                      thumbnail:
-                                        type: string
-                                      url:
-                                        type: string
-                                      platform:
-                                        anyOf:
-                                          - type: string
-                                          - type: "null"
-                                      platformId:
-                                        anyOf:
-                                          - type: string
-                                          - type: "null"
-                                      render:
-                                        type: boolean
-                                      position:
-                                        type: number
-                                    required:
-                                      - id
-                                      - playlistId
-                                      - title
-                                      - url
-                                      - render
-                                      - position
-                                    additionalProperties: false
                                 coverUrl:
                                   anyOf:
                                     - type: string
@@ -4321,7 +4262,6 @@ paths:
                               required:
                                 - id
                                 - name
-                                - videos
                                 - coverUrl
                                 - numVideos
                                 - updatedAt
@@ -4579,47 +4519,6 @@ paths:
                                   anyOf:
                                     - type: string
                                     - type: "null"
-                                videos:
-                                  type: array
-                                  items:
-                                    type: object
-                                    properties:
-                                      id:
-                                        type: string
-                                        format: uuid
-                                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                      playlistId:
-                                        type: string
-                                        format: uuid
-                                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                      title:
-                                        type: string
-                                      description:
-                                        type: string
-                                      thumbnail:
-                                        type: string
-                                      url:
-                                        type: string
-                                      platform:
-                                        anyOf:
-                                          - type: string
-                                          - type: "null"
-                                      platformId:
-                                        anyOf:
-                                          - type: string
-                                          - type: "null"
-                                      render:
-                                        type: boolean
-                                      position:
-                                        type: number
-                                    required:
-                                      - id
-                                      - playlistId
-                                      - title
-                                      - url
-                                      - render
-                                      - position
-                                    additionalProperties: false
                                 coverUrl:
                                   anyOf:
                                     - type: string
@@ -4631,7 +4530,6 @@ paths:
                               required:
                                 - id
                                 - name
-                                - videos
                                 - coverUrl
                                 - numVideos
                                 - updatedAt
@@ -5044,47 +4942,6 @@ paths:
                             anyOf:
                               - type: string
                               - type: "null"
-                          videos:
-                            type: array
-                            items:
-                              type: object
-                              properties:
-                                id:
-                                  type: string
-                                  format: uuid
-                                  pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                playlistId:
-                                  type: string
-                                  format: uuid
-                                  pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
-                                title:
-                                  type: string
-                                description:
-                                  type: string
-                                thumbnail:
-                                  type: string
-                                url:
-                                  type: string
-                                platform:
-                                  anyOf:
-                                    - type: string
-                                    - type: "null"
-                                platformId:
-                                  anyOf:
-                                    - type: string
-                                    - type: "null"
-                                render:
-                                  type: boolean
-                                position:
-                                  type: number
-                              required:
-                                - id
-                                - playlistId
-                                - title
-                                - url
-                                - render
-                                - position
-                              additionalProperties: false
                           coverUrl:
                             anyOf:
                               - type: string
@@ -5096,7 +4953,6 @@ paths:
                         required:
                           - id
                           - name
-                          - videos
                           - coverUrl
                           - numVideos
                           - updatedAt
