# openapi/collectionsOpenApi.ts
@@ -2,24 +2,11 @@ import * as collectionSchemas from '../src/features/collections/schemas';
 import { successResponse, errorResponse } from './commonSchemas';
 import { z } from 'zod';
 const id = '00000000-0000-0000-0000-000000000000';
-const playlistVideoDTOSchema = z.object({
-    id: z.uuid(),
-    playlistId: z.uuid(),
-    title: z.string(),
-    description: z.string().optional(),
-    thumbnail: z.string().optional(),
-    url: z.string(),
-    platform: z.string().nullable().optional(),
-    platformId: z.string().nullable().optional(),
-    render: z.boolean(),
-    position: z.number(),
-});
 
 const playlistDTOSchema = z.object({
     id: z.uuid(),
     name: z.string(),
     description: z.string().nullable().optional(),
-    videos: z.array(playlistVideoDTOSchema),
     coverUrl: z.string().nullable(),
     numVideos: z.number(),
     updatedAt: z.string(),
